force-app/main/default/objects/MM_Question__c/MM_Question__c.object-meta.xml
<CustomObject>
    <description>Stores individual questions and their configuration. Supports multiple answer types</description>
    <label>Question</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>