force-app/main/default/objects/MM_Question__c/fields/MM_AI_Analysis__c.field-meta.xml
<CustomField>
    <fullName>MM_AI_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Analysis</label>
    <type>Checkbox</type>
</CustomField>