force-app/main/default/objects/MM_Question__c/fields/MM_Crisis_Flag__c.field-meta.xml
<CustomField>
    <fullName>MM_Crisis_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crisis Flag</label>
    <type>Checkbox</type>
</CustomField>