force-app/main/default/objects/MM_Question__c/fields/MM_Immediate_Intervention__c.field-meta.xml
<CustomField>
    <fullName>MM_Immediate_Intervention__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Immediate Intervention</label>
    <type>Checkbox</type>
</CustomField>