force-app/main/default/objects/MM_Question__c/fields/MM_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>MM_Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire</label>
    <referenceTo>MM_Questionnaire__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>