force-app/main/default/objects/MM_Question__c/fields/MM_QuestionText__c.field-meta.xml
<CustomField>
    <fullName>MM_QuestionText__c</fullName>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>