force-app/main/default/objects/MM_Question__c/fields/MM_Required__c.field-meta.xml
<CustomField>
    <fullName>MM_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>