force-app/main/default/objects/MM_Question__c/fields/MM_Section__c.field-meta.xml
<CustomField>
    <fullName>MM_Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Behavioral</fullName>
            </value>
            <value>
                <fullName>Demographics</fullName>
            </value>
            <value>
                <fullName>Emotional</fullName>
            </value>
            <value>
                <fullName>Functioning</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Treatment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>