force-app/main/default/objects/MM_Question__c/fields/MM_Type__c.field-meta.xml
<CustomField>
    <fullName>MM_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scale</fullName>
            </value>
            <value>
                <fullName>Multiple Choice</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Yes/No</fullName>
            </value>
            <value>
                <fullName>Multiple Select</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>