force-app/main/default/objects/MM_Question__c/fields/MM_Weight__c.field-meta.xml
<CustomField>
    <fullName>MM_Weight__c</fullName>
    <description>Scoring importance (e.g., 1.5 for critical questions)</description>
    <label>Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>