force-app/main/default/objects/MM_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MM_Order__c</columns>
    <columns>MM_Section__c</columns>
    <columns>MM_Category__c</columns>
    <columns>MM_Type__c</columns>
    <columns>MM_QuestionText__c</columns>
    <columns>MM_Weight__c</columns>
    <columns>MM_Crisis_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>